<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/notconnected"
    android:textSize="30sp"
    />
<Button
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/connect_button"
	android:onClick="connectToPush"
	android:padding="10px"
	/>
<ProgressBar android:id="@+id/progress_main"
       	style="@style/CustomProgressBar"
     	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:gravity="center_vertical"
       	android:visibility="invisible"
       	/>
<TextView  
	android:id="@+id/connection_error"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/connection_error"
    android:visibility="invisible"
    />
</LinearLayout>
